--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
   </dependencies>
 
   <build>
+    <defaultGoal>install</defaultGoal>
+    <!-- Source directory configuration -->
+    <sourceDirectory>src/main/java</sourceDirectory>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
