--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.mgl7460.yearmanipulation</groupId>
   <artifactId>year-manipulation-maven</artifactId>
   <version>1.0</version>
+  <packaging>jar</packaging>
 
   <name>year-manipulation-maven</name>
   <!-- FIXME change it to the project's website -->
@@ -28,7 +29,6 @@
   </dependencies>
 
   <build>
-    <defaultGoal>install</defaultGoal>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -70,17 +70,39 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        
-        
-      </plugins>
-    </pluginManagement>
-    <plugins>
     	<plugin>
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-checkstyle-plugin</artifactId>
     		<version>3.1.1</version>
+    		<configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>false</failsOnError>
+                    <!-- linkXRef=false to avoid WARNING 'Unable to locate Source XRef to link to' -->
+                    <linkXRef>false</linkXRef>
+            </configuration>
+            <executions>
+     			<execution>
+       				<id>validate</id>
+       				<phase>validate</phase>
+       				<goals>
+         				<goal>check</goal>
+       				</goals>
+     			</execution>
+   			</executions>
     	</plugin>
-    </plugins>
+		<plugin>
+           <groupId>com.github.spotbugs</groupId>
+           <artifactId>spotbugs-maven-plugin</artifactId>
+           <version>4.0.4</version>
+        </plugin>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-pmd-plugin</artifactId>
+           <version>3.13.0</version>
+        </plugin>		   
+      </plugins>
+    </pluginManagement>
     
   </build>
   
@@ -98,6 +120,32 @@
             </reportSet>
           </reportSets>
         </plugin>
+        <plugin>
+           <groupId>com.github.spotbugs</groupId>
+           <artifactId>spotbugs-maven-plugin</artifactId>
+           <version>4.1.3</version>
+          <configuration>
+            <xmlOutput>true</xmlOutput>
+            <xmlOutputDirectory>target/site</xmlOutputDirectory>
+          </configuration>
+        </plugin>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-pmd-plugin</artifactId>
+           <version>3.13.0</version>  
+          <reportSets>
+            <reportSet>
+              <reports>
+                <report>pmd</report>
+              </reports>
+            </reportSet>
+          </reportSets>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jdepend-maven-plugin</artifactId>
+          <version>2.0</version>
+        </plugin>	
       </plugins>
   </reporting>
   
