--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
   </dependencies>
 
   <build>
+    <!-- <defaultGoal>site</defaultGoal> -->
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -69,41 +70,68 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
-        </plugin>
-    	<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-checkstyle-plugin</artifactId>
-    		<version>3.1.1</version>
-    		<configuration>
-                    <configLocation>checkstyle.xml</configLocation>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>false</failsOnError>
-                    <!-- linkXRef=false to avoid WARNING 'Unable to locate Source XRef to link to' -->
-                    <linkXRef>false</linkXRef>
-            </configuration>
-            <executions>
-     			<execution>
-       				<id>validate</id>
-       				<phase>validate</phase>
-       				<goals>
-         				<goal>check</goal>
-       				</goals>
-     			</execution>
-   			</executions>
-    	</plugin>
-		<plugin>
-           <groupId>com.github.spotbugs</groupId>
-           <artifactId>spotbugs-maven-plugin</artifactId>
-           <version>4.0.4</version>
-        </plugin>
+        </plugin>	
+ 		<plugin>
+   		   <groupId>org.apache.maven.plugins</groupId>
+   	       <artifactId>maven-checkstyle-plugin</artifactId>
+   		   <version>3.1.1</version>
+	    </plugin>  
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>3.13.0</version>
-        </plugin>		   
+        </plugin>
+		<plugin>
+           <groupId>com.github.spotbugs</groupId>
+           <artifactId>spotbugs-maven-plugin</artifactId>
+           <version>4.1.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jdepend-maven-plugin</artifactId>
+          <version>2.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     
+    <plugins>
+        <plugin>
+   		   <groupId>org.apache.maven.plugins</groupId>
+   	       <artifactId>maven-checkstyle-plugin</artifactId>
+   		   <version>3.1.1</version>
+     	   <configuration>
+     		  <encoding>UTF-8</encoding>
+     		  <consoleOutput>true</consoleOutput>
+      		  <failsOnError>false</failsOnError>
+     		  <linkXRef>false</linkXRef>
+   		   </configuration>
+		   <executions>
+		     <execution>
+		       <id>validate</id>
+		       <phase>validate</phase>
+		       <goals>
+		         <goal>checkstyle</goal>
+		       </goals>
+		     </execution>
+		   </executions>
+	    </plugin> 
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-pmd-plugin</artifactId>
+           <version>3.13.0</version>
+        </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.1.3</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jdepend-maven-plugin</artifactId>
+        <version>2.0</version>
+      </plugin>
+    </plugins>
+
   </build>
   
   <reporting>
@@ -121,25 +149,41 @@
           </reportSets>
         </plugin>
         <plugin>
-           <groupId>com.github.spotbugs</groupId>
-           <artifactId>spotbugs-maven-plugin</artifactId>
-           <version>4.1.3</version>
-          <configuration>
-            <xmlOutput>true</xmlOutput>
-            <xmlOutputDirectory>target/site</xmlOutputDirectory>
-          </configuration>
-        </plugin>
-        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
-           <version>3.13.0</version>  
-          <reportSets>
+           <version>3.13.0</version>
+           <reportSets>
             <reportSet>
               <reports>
                 <report>pmd</report>
               </reports>
             </reportSet>
-          </reportSets>
+           </reportSets>
+           <!--    
+       	   <configuration>
+       		   <linkXref>true</linkXref>
+          	   <sourceEncoding>utf-8</sourceEncoding>
+               <minimumTokens>100</minimumTokens>
+               <targetJdk>1.5</targetJdk>
+          	   <excludes>
+            		<exclude>**/*Bean.java</exclude>
+            		<exclude>**/generated/*.java</exclude>
+          	   </excludes>
+               <excludeRoots>
+            		<excludeRoot>target/generated-sources/stubs</excludeRoot>
+          	   </excludeRoots>
+           </configuration>
+           -->
+        </plugin>
+        <plugin>
+           <groupId>com.github.spotbugs</groupId>
+           <artifactId>spotbugs-maven-plugin</artifactId>
+           <version>4.1.3</version>
+           <configuration>
+              <xmlOutput>true</xmlOutput>
+              <!-- <xmlOutputDirectory>target/site</xmlOutputDirectory> -->
+              <omitVisitors>FindDeadLocalStores,UnreadFields</omitVisitors>
+           </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
